--- a/admin/index.html
+++ b/admin/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Contactez ShineNows pour un accompagnement premium.'>
-  <title>Contact ShineNows</title>
+  <meta name='description' content='Espace réservé à l'équipe ShineNows.'>
+  <title>Admin | ShineNows</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
 </head>
@@ -25,26 +25,15 @@
   </div>
 </header>
 <main>
-<section class='contact-section'>
+<section class='admin-section'>
   <div class='container'>
-    <h1>Contactez ShineNows</h1>
-    <p>Nous répondons sous 24h ouvrées.</p>
-    <div class='contact-grid' style='margin-top:2rem;'>
-      <div class='info-panel'>
-        <p>+49 157 38 30 60 56</p>
-        <p>contact@shinenows.com</p>
-        <ul>
-          <li>Slack privé pour les clients</li>
-          <li>Disponibilité EU & US</li>
-          <li>Workshops à distance ou sur site</li>
-        </ul>
-      </div>
-      <form class='form-card'>
-        <input type='text' placeholder='Votre nom' required>
+    <h1>Admin Panel</h1>
+    <p style='color:var(--text-gray);'>Interface sécurisée réservée à l'équipe ShineNows.</p>
+    <div class='admin-panel'>
+      <form>
         <input type='email' placeholder='Email professionnel' required>
-        <input type='tel' placeholder='Téléphone'>
-        <textarea placeholder='Message'></textarea>
-        <button class='btn'>Envoyer le message</button>
+        <input type='password' placeholder='Mot de passe'>
+        <button class='btn'>Connexion sécurisée</button>
       </form>
     </div>
   </div>
