--- a/contact/de.html
+++ b/contact/de.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang='fr'>
+<html lang='de'>
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Contactez ShineNows pour un accompagnement premium.'>
-  <title>Contact ShineNows</title>
+  <meta name='description' content='Kontaktieren Sie ShineNows für eine persönliche Begleitung.'>
+  <title>Kontakt ShineNows</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
 </head>
@@ -12,14 +12,14 @@
 <header class='glass-header'>
   <div class='container'>
     <div class='header-inner'>
-      <a href='/' class='logo-wrapper'>
+      <a href='/de/' class='logo-wrapper'>
         <img src='/assets/images/logo/shineNews-logo.webp' alt='ShineNows'>
         <span>ShineNows</span>
       </a>
       <nav>
-        <a href='/'>Accueil</a><a href='/services/'>Services</a><a href='/portfolio/'>Réalisations</a><a href='/blog/'>Blog</a><a href='/devis/'>Devis</a><a href='/contact/'>Contact</a>
+        <a href='/de/'>Start</a><a href='/services/de.html'>Leistungen</a><a href='/portfolio/de.html'>Referenzen</a><a href='/blog/de/'>Blog</a><a href='/devis/de.html'>Angebot</a><a href='/contact/de.html'>Kontakt</a>
       </nav>
-      <div class='language-selector'><span>FR</span> · <a href="/en/">EN</a> · <a href="/de/">DE</a></div>
+      <div class='language-selector'><a href="/">FR</a> · <a href="/en/">EN</a> · <span>DE</span></div>
       <div class='mobile-menu'>☰</div>
     </div>
   </div>
@@ -27,8 +27,8 @@
 <main>
 <section class='contact-section'>
   <div class='container'>
-    <h1>Contactez ShineNows</h1>
-    <p>Nous répondons sous 24h ouvrées.</p>
+    <h1>Kontakt zu ShineNows</h1>
+    <p>Antwort innerhalb eines Werktags.</p>
     <div class='contact-grid' style='margin-top:2rem;'>
       <div class='info-panel'>
         <p>+49 157 38 30 60 56</p>
@@ -40,11 +40,11 @@
         </ul>
       </div>
       <form class='form-card'>
-        <input type='text' placeholder='Votre nom' required>
-        <input type='email' placeholder='Email professionnel' required>
-        <input type='tel' placeholder='Téléphone'>
-        <textarea placeholder='Message'></textarea>
-        <button class='btn'>Envoyer le message</button>
+        <input type='text' placeholder='Ihr Name' required>
+        <input type='email' placeholder='Business-E-Mail' required>
+        <input type='tel' placeholder='Telefon'>
+        <textarea placeholder='Nachricht'></textarea>
+        <button class='btn'>Nachricht senden</button>
       </form>
     </div>
   </div>
