--- a/contact/en.html
+++ b/contact/en.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang='fr'>
+<html lang='en'>
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Contactez ShineNows pour un accompagnement premium.'>
+  <meta name='description' content='Contact ShineNows for premium support.'>
   <title>Contact ShineNows</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
@@ -12,14 +12,14 @@
 <header class='glass-header'>
   <div class='container'>
     <div class='header-inner'>
-      <a href='/' class='logo-wrapper'>
+      <a href='/en/' class='logo-wrapper'>
         <img src='/assets/images/logo/shineNews-logo.webp' alt='ShineNows'>
         <span>ShineNows</span>
       </a>
       <nav>
-        <a href='/'>Accueil</a><a href='/services/'>Services</a><a href='/portfolio/'>Réalisations</a><a href='/blog/'>Blog</a><a href='/devis/'>Devis</a><a href='/contact/'>Contact</a>
+        <a href='/en/'>Home</a><a href='/services/en.html'>Services</a><a href='/portfolio/en.html'>Work</a><a href='/blog/en/'>Insights</a><a href='/devis/en.html'>Proposal</a><a href='/contact/en.html'>Contact</a>
       </nav>
-      <div class='language-selector'><span>FR</span> · <a href="/en/">EN</a> · <a href="/de/">DE</a></div>
+      <div class='language-selector'><a href="/">FR</a> · <span>EN</span> · <a href="/de/">DE</a></div>
       <div class='mobile-menu'>☰</div>
     </div>
   </div>
@@ -27,8 +27,8 @@
 <main>
 <section class='contact-section'>
   <div class='container'>
-    <h1>Contactez ShineNows</h1>
-    <p>Nous répondons sous 24h ouvrées.</p>
+    <h1>Contact ShineNows</h1>
+    <p>We answer within one business day.</p>
     <div class='contact-grid' style='margin-top:2rem;'>
       <div class='info-panel'>
         <p>+49 157 38 30 60 56</p>
@@ -40,11 +40,11 @@
         </ul>
       </div>
       <form class='form-card'>
-        <input type='text' placeholder='Votre nom' required>
-        <input type='email' placeholder='Email professionnel' required>
-        <input type='tel' placeholder='Téléphone'>
+        <input type='text' placeholder='Your name' required>
+        <input type='email' placeholder='Business email' required>
+        <input type='tel' placeholder='Phone'>
         <textarea placeholder='Message'></textarea>
-        <button class='btn'>Envoyer le message</button>
+        <button class='btn'>Send message</button>
       </form>
     </div>
   </div>
