--- a/devis/en.html
+++ b/devis/en.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang='fr'>
+<html lang='en'>
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Formulaire de devis ShineNows pour cadrer votre projet.'>
-  <title>Demande de devis ShineNows</title>
+  <meta name='description' content='ShineNows project brief form.'>
+  <title>Request a proposal | ShineNows</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
 </head>
@@ -12,14 +12,14 @@
 <header class='glass-header'>
   <div class='container'>
     <div class='header-inner'>
-      <a href='/' class='logo-wrapper'>
+      <a href='/en/' class='logo-wrapper'>
         <img src='/assets/images/logo/shineNews-logo.webp' alt='ShineNows'>
         <span>ShineNows</span>
       </a>
       <nav>
-        <a href='/'>Accueil</a><a href='/services/'>Services</a><a href='/portfolio/'>Réalisations</a><a href='/blog/'>Blog</a><a href='/devis/'>Devis</a><a href='/contact/'>Contact</a>
+        <a href='/en/'>Home</a><a href='/services/en.html'>Services</a><a href='/portfolio/en.html'>Work</a><a href='/blog/en/'>Insights</a><a href='/devis/en.html'>Proposal</a><a href='/contact/en.html'>Contact</a>
       </nav>
-      <div class='language-selector'><span>FR</span> · <a href="/en/">EN</a> · <a href="/de/">DE</a></div>
+      <div class='language-selector'><a href="/">FR</a> · <span>EN</span> · <a href="/de/">DE</a></div>
       <div class='mobile-menu'>☰</div>
     </div>
   </div>
@@ -27,39 +27,39 @@
 <main>
 <section class='devis-section'>
   <div class='container'>
-    <h1>Parlons de votre prochain site</h1>
-    <p>Remplissez ce brief détaillé pour une proposition sur mesure.</p>
+    <h1>Tell us about your next website</h1>
+    <p>Fill in this detailed brief for a tailored proposal.</p>
     <form id='devis-form'>
       <div class='form-section'>
-        <h3>Informations générales</h3>
+        <h3>General information</h3>
         <input type='text' name='nom' placeholder='Nom & Prénom' required>
         <input type='email' name='email' placeholder='Email' required>
         <input type='tel' name='telephone' placeholder='Téléphone'>
       </div>
       <div class='form-section'>
-        <h3>Type de projet</h3>
+        <h3>Project type</h3>
         <div class='checkbox-group'>
-          <label><input type='checkbox' name='type[]' value='Site vitrine'> Site vitrine</label><label><input type='checkbox' name='type[]' value='E-commerce'> E-commerce</label><label><input type='checkbox' name='type[]' value='Refonte'> Refonte</label>
+          <label><input type='checkbox' name='type[]' value='Showcase site'> Showcase site</label><label><input type='checkbox' name='type[]' value='E-commerce'> E-commerce</label><label><input type='checkbox' name='type[]' value='Redesign'> Redesign</label>
         </div>
       </div>
       <div class='form-section'>
-        <h3>Hébergement & Maintenance</h3>
+        <h3>Hosting & Care</h3>
         <div class='radio-group'>
-          <label><input type='radio' name='hosting' value='Essentiel'> Essentiel</label><label><input type='radio' name='hosting' value='Professionnel'> Professionnel</label><label><input type='radio' name='hosting' value='Enterprise'> Enterprise</label><label><input type='radio' name='hosting' value='Pas d'hébergement'> Pas d'hébergement</label>
+          <label><input type='radio' name='hosting' value='Essential'> Essential</label><label><input type='radio' name='hosting' value='Professional'> Professional</label><label><input type='radio' name='hosting' value='Enterprise'> Enterprise</label><label><input type='radio' name='hosting' value='No hosting'> No hosting</label>
         </div>
       </div>
       <div class='form-section'>
-        <h3>Budget approximatif</h3>
+        <h3>Estimated budget</h3>
         <select name='budget'>
           <option value=''>--</option>
-          <option value='1 000 - 2 000 €'>1 000 - 2 000 €</option><option value='2 000 - 5 000 €'>2 000 - 5 000 €</option><option value='5 000 - 10 000 €'>5 000 - 10 000 €</option><option value='+ 10 000 €'>+ 10 000 €</option>
+          <option value='€1k - €2k'>€1k - €2k</option><option value='€2k - €5k'>€2k - €5k</option><option value='€5k - €10k'>€5k - €10k</option><option value='€10k+'>€10k+</option>
         </select>
       </div>
       <div class='form-section'>
-        <textarea name='details' placeholder='Parlez-nous de votre projet' required></textarea>
+        <textarea name='details' placeholder='Tell us about your project' required></textarea>
       </div>
-      <button type='submit' class='btn btn-primary'>Envoyer ma demande</button>
-      <button type='button' id='download-brief' class='btn btn-secondary'>Télécharger mon brief</button>
+      <button type='submit' class='btn btn-primary'>Send my request</button>
+      <button type='button' id='download-brief' class='btn btn-secondary'>Download my brief</button>
     </form>
   </div>
 </section>
