--- a/contact/de.html
+++ b/contact/de.html
@@ -3,55 +3,78 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Kontaktieren Sie ShineNows für eine persönliche Begleitung.'>
-  <title>Kontakt ShineNows</title>
+  <meta name='description' content='Kontakt ShineNows.'>
+  <title>ShineNows | Contact</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
 </head>
 <body>
-<header class='glass-header'>
+<header class='header'>
   <div class='container'>
     <div class='header-inner'>
-      <a href='/de/' class='logo-wrapper'>
+      <a href='/de/' class='logo'>
         <img src='/assets/images/logo/shineNews-logo.webp' alt='ShineNows'>
         <span>ShineNows</span>
       </a>
-      <nav>
-        <a href='/de/'>Start</a><a href='/services/de.html'>Leistungen</a><a href='/portfolio/de.html'>Referenzen</a><a href='/blog/de/'>Blog</a><a href='/devis/de.html'>Angebot</a><a href='/contact/de.html'>Kontakt</a>
+      <nav class='main-nav'>
+        <a href='/de/'>Start</a><a href='/services/de.html'>Leistungen</a><a href='/portfolio/de.html'>Referenzen</a><a href='/blog/de.html'>Blog</a><a href='/devis/de.html'>Angebot</a><a href='/contact/de.html'>Kontakt</a>
       </nav>
-      <div class='language-selector'><a href="/">FR</a> · <a href="/en/">EN</a> · <span>DE</span></div>
-      <div class='mobile-menu'>☰</div>
+      <div class='lang-switch'><a href='/contact/'>FR</a> · <a href='/contact/en.html'>EN</a> · <span>DE</span></div>
+      <button class='menu-toggle' aria-label='Menu'>☰</button>
     </div>
   </div>
 </header>
 <main>
-<section class='contact-section'>
+<section class='hero'>
   <div class='container'>
-    <h1>Kontakt zu ShineNows</h1>
-    <p>Antwort innerhalb eines Werktags.</p>
-    <div class='contact-grid' style='margin-top:2rem;'>
-      <div class='info-panel'>
-        <p>+49 157 38 30 60 56</p>
-        <p>contact@shinenows.com</p>
-        <ul>
-          <li>Slack privé pour les clients</li>
-          <li>Disponibilité EU & US</li>
-          <li>Workshops à distance ou sur site</li>
-        </ul>
+    <div class='hero-content'>
+      <h1>Direkter Draht zum ShineNows-Team</h1>
+      <p>Kontakt via E-Mail, WhatsApp Business oder Video-Call.</p>
+      <div class='hero-actions'>
+        <a class='btn' href='/devis/de.html'>Experten schreiben</a>
+        <a class='btn btn-outline' href='/portfolio/de.html'>Verfügbarkeiten prüfen</a>
       </div>
-      <form class='form-card'>
-        <input type='text' placeholder='Ihr Name' required>
+      <ul class='hero-points'>
+        <li>Mehrsprachig nativ</li><li>SEO & Performance inklusive</li><li>Senior-Ansprechpartner</li>
+      </ul>
+      <div class='stats'>
+        <div class='stat'><strong data-count='120'>0</strong><span>Projekte gelauncht</span></div><div class='stat'><strong data-count='98'>0</strong><span>Kundenzufriedenheit</span></div><div class='stat'><strong data-count='12'>0</strong><span>Länder beliefert</span></div>
+      </div>
+    </div>
+    <div class='hero-visual'>
+      <img src='/assets/images/logo/shineNews-hero.webp' alt='ShineNows hero'>
+    </div>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <div class='contact-grid'>
+      <div class='contact-card'>
+        <h3>ShineNows</h3>
+        <ul><li>+49 157 38 30 60 56</li><li>kontakt@shinenows.com</li><li>Verfügbarkeit EU & US</li><li>Remote oder vor Ort Workshops</li></ul>
+      </div>
+      <form class='form-grid'>
+        <input type='text' placeholder='Vollständiger Name' required>
         <input type='email' placeholder='Business-E-Mail' required>
         <input type='tel' placeholder='Telefon'>
         <textarea placeholder='Nachricht'></textarea>
-        <button class='btn'>Nachricht senden</button>
+        <button class='btn' type='submit'>Senden</button>
       </form>
+    </div>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <div class='cta-panel'>
+      <h2>Bereit zur Zusammenarbeit?</h2>
+      <p style='color:var(--text-gray);margin:1rem 0 1.5rem;'>Teilen Sie Ihre Ziele und erhalten Sie innerhalb 24h einen Plan.</p>
+      <a class='btn' href='/devis/de.html'>Gespräch planen</a>
     </div>
   </div>
 </section>
 </main>
 
-<footer>
+<footer class="footer">
   <div class="container">
     <div class="footer-grid">
       <div class="footer-col">
@@ -60,11 +83,11 @@
       </div>
       <div class="footer-col">
         <h4>Services</h4>
-        <a href="/services#hosting">Hébergement & Maintenance</a>
-        <a href="/services#vitrine">Sites Vitrine</a>
-        <a href="/services#ecommerce">E-commerce</a>
-        <a href="/services#refonte">Refonte de Site</a>
-        <a href="/services#seo">SEO & Performance</a>
+        <a href="/services/#hosting">Hébergement & Maintenance</a>
+        <a href="/services/#vitrine">Sites Vitrine</a>
+        <a href="/services/#commerce">E-commerce</a>
+        <a href="/services/#refonte">Refonte stratégique</a>
+        <a href="/services/#seo">SEO & Performance</a>
       </div>
       <div class="footer-col">
         <h4>Contact</h4>
@@ -77,9 +100,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-bottom">
-      © 2025 Shinenows. Tous droits réservés.
-    </div>
+    <div class="footer-bottom">© 2025 ShineNows. Tous droits réservés.</div>
   </div>
 </footer>
 
