--- a/contact/en.html
+++ b/contact/en.html
@@ -3,55 +3,78 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Contact ShineNows for premium support.'>
-  <title>Contact ShineNows</title>
+  <meta name='description' content='Contact ShineNows.'>
+  <title>ShineNows | Contact</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
 </head>
 <body>
-<header class='glass-header'>
+<header class='header'>
   <div class='container'>
     <div class='header-inner'>
-      <a href='/en/' class='logo-wrapper'>
+      <a href='/en/' class='logo'>
         <img src='/assets/images/logo/shineNews-logo.webp' alt='ShineNows'>
         <span>ShineNows</span>
       </a>
-      <nav>
-        <a href='/en/'>Home</a><a href='/services/en.html'>Services</a><a href='/portfolio/en.html'>Work</a><a href='/blog/en/'>Insights</a><a href='/devis/en.html'>Proposal</a><a href='/contact/en.html'>Contact</a>
+      <nav class='main-nav'>
+        <a href='/en/'>Home</a><a href='/services/en.html'>Services</a><a href='/portfolio/en.html'>Work</a><a href='/blog/en.html'>Blog</a><a href='/devis/en.html'>Proposal</a><a href='/contact/en.html'>Contact</a>
       </nav>
-      <div class='language-selector'><a href="/">FR</a> · <span>EN</span> · <a href="/de/">DE</a></div>
-      <div class='mobile-menu'>☰</div>
+      <div class='lang-switch'><a href='/contact/'>FR</a> · <span>EN</span> · <a href='/contact/de.html'>DE</a></div>
+      <button class='menu-toggle' aria-label='Menu'>☰</button>
     </div>
   </div>
 </header>
 <main>
-<section class='contact-section'>
+<section class='hero'>
   <div class='container'>
-    <h1>Contact ShineNows</h1>
-    <p>We answer within one business day.</p>
-    <div class='contact-grid' style='margin-top:2rem;'>
-      <div class='info-panel'>
-        <p>+49 157 38 30 60 56</p>
-        <p>contact@shinenows.com</p>
-        <ul>
-          <li>Slack privé pour les clients</li>
-          <li>Disponibilité EU & US</li>
-          <li>Workshops à distance ou sur site</li>
-        </ul>
+    <div class='hero-content'>
+      <h1>Direct access to the ShineNows team</h1>
+      <p>Choose email, WhatsApp Business or a dedicated video session.</p>
+      <div class='hero-actions'>
+        <a class='btn' href='/devis/en.html'>Write to an expert</a>
+        <a class='btn btn-outline' href='/portfolio/en.html'>Check availability</a>
       </div>
-      <form class='form-card'>
-        <input type='text' placeholder='Your name' required>
+      <ul class='hero-points'>
+        <li>Native multilingual</li><li>SEO & performance ready</li><li>Dedicated senior squad</li>
+      </ul>
+      <div class='stats'>
+        <div class='stat'><strong data-count='120'>0</strong><span>projects launched</span></div><div class='stat'><strong data-count='98'>0</strong><span>client satisfaction</span></div><div class='stat'><strong data-count='12'>0</strong><span>countries delivered</span></div>
+      </div>
+    </div>
+    <div class='hero-visual'>
+      <img src='/assets/images/logo/shineNews-hero.webp' alt='ShineNows hero'>
+    </div>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <div class='contact-grid'>
+      <div class='contact-card'>
+        <h3>ShineNows</h3>
+        <ul><li>+49 157 38 30 60 56</li><li>hello@shinenows.com</li><li>Availability EU & US</li><li>Remote or on-site workshops</li></ul>
+      </div>
+      <form class='form-grid'>
+        <input type='text' placeholder='Full name' required>
         <input type='email' placeholder='Business email' required>
         <input type='tel' placeholder='Phone'>
         <textarea placeholder='Message'></textarea>
-        <button class='btn'>Send message</button>
+        <button class='btn' type='submit'>Send</button>
       </form>
+    </div>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <div class='cta-panel'>
+      <h2>Ready to collaborate?</h2>
+      <p style='color:var(--text-gray);margin:1rem 0 1.5rem;'>Share your ambition and get a precise plan within 24h.</p>
+      <a class='btn' href='/devis/en.html'>Schedule a call</a>
     </div>
   </div>
 </section>
 </main>
 
-<footer>
+<footer class="footer">
   <div class="container">
     <div class="footer-grid">
       <div class="footer-col">
@@ -60,11 +83,11 @@
       </div>
       <div class="footer-col">
         <h4>Services</h4>
-        <a href="/services#hosting">Hébergement & Maintenance</a>
-        <a href="/services#vitrine">Sites Vitrine</a>
-        <a href="/services#ecommerce">E-commerce</a>
-        <a href="/services#refonte">Refonte de Site</a>
-        <a href="/services#seo">SEO & Performance</a>
+        <a href="/services/#hosting">Hébergement & Maintenance</a>
+        <a href="/services/#vitrine">Sites Vitrine</a>
+        <a href="/services/#commerce">E-commerce</a>
+        <a href="/services/#refonte">Refonte stratégique</a>
+        <a href="/services/#seo">SEO & Performance</a>
       </div>
       <div class="footer-col">
         <h4>Contact</h4>
@@ -77,9 +100,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-bottom">
-      © 2025 Shinenows. Tous droits réservés.
-    </div>
+    <div class="footer-bottom">© 2025 ShineNows. Tous droits réservés.</div>
   </div>
 </footer>
 
