--- a/contact/index.html
+++ b/contact/index.html
@@ -3,55 +3,78 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Contactez ShineNows pour un accompagnement premium.'>
-  <title>Contact ShineNows</title>
+  <meta name='description' content='Contact ShineNows.'>
+  <title>ShineNows | Contact</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
 </head>
 <body>
-<header class='glass-header'>
+<header class='header'>
   <div class='container'>
     <div class='header-inner'>
-      <a href='/' class='logo-wrapper'>
+      <a href='/' class='logo'>
         <img src='/assets/images/logo/shineNews-logo.webp' alt='ShineNows'>
         <span>ShineNows</span>
       </a>
-      <nav>
+      <nav class='main-nav'>
         <a href='/'>Accueil</a><a href='/services/'>Services</a><a href='/portfolio/'>Réalisations</a><a href='/blog/'>Blog</a><a href='/devis/'>Devis</a><a href='/contact/'>Contact</a>
       </nav>
-      <div class='language-selector'><span>FR</span> · <a href="/en/">EN</a> · <a href="/de/">DE</a></div>
-      <div class='mobile-menu'>☰</div>
+      <div class='lang-switch'><span>FR</span> · <a href='/contact/en.html'>EN</a> · <a href='/contact/de.html'>DE</a></div>
+      <button class='menu-toggle' aria-label='Menu'>☰</button>
     </div>
   </div>
 </header>
 <main>
-<section class='contact-section'>
+<section class='hero'>
   <div class='container'>
-    <h1>Contactez ShineNows</h1>
-    <p>Nous répondons sous 24h ouvrées.</p>
-    <div class='contact-grid' style='margin-top:2rem;'>
-      <div class='info-panel'>
-        <p>+49 157 38 30 60 56</p>
-        <p>contact@shinenows.com</p>
-        <ul>
-          <li>Slack privé pour les clients</li>
-          <li>Disponibilité EU & US</li>
-          <li>Workshops à distance ou sur site</li>
-        </ul>
+    <div class='hero-content'>
+      <h1>Un accès direct à l’équipe ShineNows</h1>
+      <p>Choisissez le canal qui vous convient : email, WhatsApp Business ou visio dédiée.</p>
+      <div class='hero-actions'>
+        <a class='btn' href='/devis/'>Écrire à un expert</a>
+        <a class='btn btn-outline' href='/portfolio/'>Voir les disponibilités</a>
       </div>
-      <form class='form-card'>
-        <input type='text' placeholder='Votre nom' required>
+      <ul class='hero-points'>
+        <li>Multilingue natif</li><li>SEO & performance inclus</li><li>Support senior dédié</li>
+      </ul>
+      <div class='stats'>
+        <div class='stat'><strong data-count='120'>0</strong><span>projets déployés</span></div><div class='stat'><strong data-count='98'>0</strong><span>% de satisfaction</span></div><div class='stat'><strong data-count='12'>0</strong><span>pays livrés</span></div>
+      </div>
+    </div>
+    <div class='hero-visual'>
+      <img src='/assets/images/logo/shineNews-hero.webp' alt='ShineNows hero'>
+    </div>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <div class='contact-grid'>
+      <div class='contact-card'>
+        <h3>ShineNows</h3>
+        <ul><li>+49 157 38 30 60 56</li><li>contact@shinenows.com</li><li>Disponibilité EU & US</li><li>Workshops à distance ou sur site</li></ul>
+      </div>
+      <form class='form-grid'>
+        <input type='text' placeholder='Nom et prénom' required>
         <input type='email' placeholder='Email professionnel' required>
         <input type='tel' placeholder='Téléphone'>
         <textarea placeholder='Message'></textarea>
-        <button class='btn'>Envoyer le message</button>
+        <button class='btn' type='submit'>Envoyer</button>
       </form>
+    </div>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <div class='cta-panel'>
+      <h2>Prêt à collaborer ?</h2>
+      <p style='color:var(--text-gray);margin:1rem 0 1.5rem;'>Expliquez votre ambition et recevez un plan précis sous 24h.</p>
+      <a class='btn' href='/devis/'>Planifier un échange</a>
     </div>
   </div>
 </section>
 </main>
 
-<footer>
+<footer class="footer">
   <div class="container">
     <div class="footer-grid">
       <div class="footer-col">
@@ -60,11 +83,11 @@
       </div>
       <div class="footer-col">
         <h4>Services</h4>
-        <a href="/services#hosting">Hébergement & Maintenance</a>
-        <a href="/services#vitrine">Sites Vitrine</a>
-        <a href="/services#ecommerce">E-commerce</a>
-        <a href="/services#refonte">Refonte de Site</a>
-        <a href="/services#seo">SEO & Performance</a>
+        <a href="/services/#hosting">Hébergement & Maintenance</a>
+        <a href="/services/#vitrine">Sites Vitrine</a>
+        <a href="/services/#commerce">E-commerce</a>
+        <a href="/services/#refonte">Refonte stratégique</a>
+        <a href="/services/#seo">SEO & Performance</a>
       </div>
       <div class="footer-col">
         <h4>Contact</h4>
@@ -77,9 +100,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-bottom">
-      © 2025 Shinenows. Tous droits réservés.
-    </div>
+    <div class="footer-bottom">© 2025 ShineNows. Tous droits réservés.</div>
   </div>
 </footer>
 
