--- a/devis/de.html
+++ b/devis/de.html
@@ -3,69 +3,77 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Projektbriefing für ShineNows.'>
-  <title>Projektbrief | ShineNows</title>
+  <meta name='description' content='ShineNows Briefing-Formular.'>
+  <title>ShineNows | Devis</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
 </head>
 <body>
-<header class='glass-header'>
+<header class='header'>
   <div class='container'>
     <div class='header-inner'>
-      <a href='/de/' class='logo-wrapper'>
+      <a href='/de/' class='logo'>
         <img src='/assets/images/logo/shineNews-logo.webp' alt='ShineNows'>
         <span>ShineNows</span>
       </a>
-      <nav>
-        <a href='/de/'>Start</a><a href='/services/de.html'>Leistungen</a><a href='/portfolio/de.html'>Referenzen</a><a href='/blog/de/'>Blog</a><a href='/devis/de.html'>Angebot</a><a href='/contact/de.html'>Kontakt</a>
+      <nav class='main-nav'>
+        <a href='/de/'>Start</a><a href='/services/de.html'>Leistungen</a><a href='/portfolio/de.html'>Referenzen</a><a href='/blog/de.html'>Blog</a><a href='/devis/de.html'>Angebot</a><a href='/contact/de.html'>Kontakt</a>
       </nav>
-      <div class='language-selector'><a href="/">FR</a> · <a href="/en/">EN</a> · <span>DE</span></div>
-      <div class='mobile-menu'>☰</div>
+      <div class='lang-switch'><a href='/devis/'>FR</a> · <a href='/devis/en.html'>EN</a> · <span>DE</span></div>
+      <button class='menu-toggle' aria-label='Menu'>☰</button>
     </div>
   </div>
 </header>
 <main>
-<section class='devis-section'>
+<section class='hero'>
   <div class='container'>
-    <h1>Sprechen wir über Ihr nächstes Projekt</h1>
-    <p>Füllen Sie dieses Briefing für ein passendes Angebot aus.</p>
-    <form id='devis-form'>
-      <div class='form-section'>
-        <h3>Allgemeine Angaben</h3>
-        <input type='text' name='nom' placeholder='Nom & Prénom' required>
-        <input type='email' name='email' placeholder='Email' required>
-        <input type='tel' name='telephone' placeholder='Téléphone'>
+    <div class='hero-content'>
+      <h1>Sprechen wir über Ihr Briefing</h1>
+      <p>Füllen Sie dieses Formular für einen klaren Fahrplan.</p>
+      <div class='hero-actions'>
+        <a class='btn' href='/contact/de.html'>Brief senden</a>
+        <a class='btn btn-outline' href='/portfolio/de.html'>Template herunterladen</a>
       </div>
-      <div class='form-section'>
-        <h3>Projektart</h3>
-        <div class='checkbox-group'>
-          <label><input type='checkbox' name='type[]' value='Vitrine'> Vitrine</label><label><input type='checkbox' name='type[]' value='E-Commerce'> E-Commerce</label><label><input type='checkbox' name='type[]' value='Relaunch'> Relaunch</label>
-        </div>
+      <ul class='hero-points'>
+        <li>Mehrsprachig nativ</li><li>SEO & Performance inklusive</li><li>Senior-Ansprechpartner</li>
+      </ul>
+      <div class='stats'>
+        <div class='stat'><strong data-count='120'>0</strong><span>Projekte gelauncht</span></div><div class='stat'><strong data-count='98'>0</strong><span>Kundenzufriedenheit</span></div><div class='stat'><strong data-count='12'>0</strong><span>Länder beliefert</span></div>
       </div>
-      <div class='form-section'>
-        <h3>Hosting & Betreuung</h3>
-        <div class='radio-group'>
-          <label><input type='radio' name='hosting' value='Essential'> Essential</label><label><input type='radio' name='hosting' value='Professional'> Professional</label><label><input type='radio' name='hosting' value='Enterprise'> Enterprise</label><label><input type='radio' name='hosting' value='Kein Hosting'> Kein Hosting</label>
-        </div>
-      </div>
-      <div class='form-section'>
-        <h3>Budgetrahmen</h3>
-        <select name='budget'>
-          <option value=''>--</option>
-          <option value='1 000 - 2 000 €'>1 000 - 2 000 €</option><option value='2 000 - 5 000 €'>2 000 - 5 000 €</option><option value='5 000 - 10 000 €'>5 000 - 10 000 €</option><option value='über 10 000 €'>über 10 000 €</option>
-        </select>
-      </div>
-      <div class='form-section'>
-        <textarea name='details' placeholder='Erzählen Sie uns vom Projekt' required></textarea>
-      </div>
-      <button type='submit' class='btn btn-primary'>Anfrage senden</button>
-      <button type='button' id='download-brief' class='btn btn-secondary'>Brief herunterladen</button>
+    </div>
+    <div class='hero-visual'>
+      <img src='/assets/images/logo/shineNews-hero.webp' alt='ShineNows hero'>
+    </div>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <form class='form-grid' id='devis-form'>
+      <input type='text' name='nom' placeholder='Vollständiger Name' required>
+      <input type='email' name='email' placeholder='Business-E-Mail' required>
+      <input type='tel' name='telephone' placeholder='Telefon'>
+      <select name='budget' required>
+        <option value=''>Budget</option>
+        <option value='1 000 - 3 000 €'>1 000 - 3 000 €</option><option value='3 000 - 6 000 €'>3 000 - 6 000 €</option><option value='6 000 - 10 000 €'>6 000 - 10 000 €</option><option value='über 10 000 €'>über 10 000 €</option>
+      </select>
+      <textarea name='message' placeholder='Nachricht' required></textarea>
+      <button type='submit' class='btn'>Anfrage senden</button>
+      <button type='button' class='btn btn-outline' id='download-brief'>Brief herunterladen</button>
     </form>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <div class='cta-panel'>
+      <h2>Bereit zur Zusammenarbeit?</h2>
+      <p style='color:var(--text-gray);margin:1rem 0 1.5rem;'>Teilen Sie Ihre Ziele und erhalten Sie innerhalb 24h einen Plan.</p>
+      <a class='btn' href='/devis/de.html'>Gespräch planen</a>
+    </div>
   </div>
 </section>
 </main>
 
-<footer>
+<footer class="footer">
   <div class="container">
     <div class="footer-grid">
       <div class="footer-col">
@@ -74,11 +82,11 @@
       </div>
       <div class="footer-col">
         <h4>Services</h4>
-        <a href="/services#hosting">Hébergement & Maintenance</a>
-        <a href="/services#vitrine">Sites Vitrine</a>
-        <a href="/services#ecommerce">E-commerce</a>
-        <a href="/services#refonte">Refonte de Site</a>
-        <a href="/services#seo">SEO & Performance</a>
+        <a href="/services/#hosting">Hébergement & Maintenance</a>
+        <a href="/services/#vitrine">Sites Vitrine</a>
+        <a href="/services/#commerce">E-commerce</a>
+        <a href="/services/#refonte">Refonte stratégique</a>
+        <a href="/services/#seo">SEO & Performance</a>
       </div>
       <div class="footer-col">
         <h4>Contact</h4>
@@ -91,9 +99,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-bottom">
-      © 2025 Shinenows. Tous droits réservés.
-    </div>
+    <div class="footer-bottom">© 2025 ShineNows. Tous droits réservés.</div>
   </div>
 </footer>
 
