--- a/devis/index.html
+++ b/devis/index.html
@@ -3,69 +3,77 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Formulaire de devis ShineNows pour cadrer votre projet.'>
-  <title>Demande de devis ShineNows</title>
+  <meta name='description' content='Formulaire de brief ShineNows.'>
+  <title>ShineNows | Devis</title>
   <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
   <link rel='stylesheet' href='/assets/css/styles.css'>
 </head>
 <body>
-<header class='glass-header'>
+<header class='header'>
   <div class='container'>
     <div class='header-inner'>
-      <a href='/' class='logo-wrapper'>
+      <a href='/' class='logo'>
         <img src='/assets/images/logo/shineNews-logo.webp' alt='ShineNows'>
         <span>ShineNows</span>
       </a>
-      <nav>
+      <nav class='main-nav'>
         <a href='/'>Accueil</a><a href='/services/'>Services</a><a href='/portfolio/'>Réalisations</a><a href='/blog/'>Blog</a><a href='/devis/'>Devis</a><a href='/contact/'>Contact</a>
       </nav>
-      <div class='language-selector'><span>FR</span> · <a href="/en/">EN</a> · <a href="/de/">DE</a></div>
-      <div class='mobile-menu'>☰</div>
+      <div class='lang-switch'><span>FR</span> · <a href='/devis/en.html'>EN</a> · <a href='/devis/de.html'>DE</a></div>
+      <button class='menu-toggle' aria-label='Menu'>☰</button>
     </div>
   </div>
 </header>
 <main>
-<section class='devis-section'>
+<section class='hero'>
   <div class='container'>
-    <h1>Parlons de votre prochain site</h1>
-    <p>Remplissez ce brief détaillé pour une proposition sur mesure.</p>
-    <form id='devis-form'>
-      <div class='form-section'>
-        <h3>Informations générales</h3>
-        <input type='text' name='nom' placeholder='Nom & Prénom' required>
-        <input type='email' name='email' placeholder='Email' required>
-        <input type='tel' name='telephone' placeholder='Téléphone'>
+    <div class='hero-content'>
+      <h1>Parlons de votre prochain site</h1>
+      <p>Remplissez ce brief haut de gamme pour recevoir une feuille de route claire.</p>
+      <div class='hero-actions'>
+        <a class='btn' href='/contact/'>Envoyer mon brief</a>
+        <a class='btn btn-outline' href='/portfolio/'>Télécharger le gabarit</a>
       </div>
-      <div class='form-section'>
-        <h3>Type de projet</h3>
-        <div class='checkbox-group'>
-          <label><input type='checkbox' name='type[]' value='Site vitrine'> Site vitrine</label><label><input type='checkbox' name='type[]' value='E-commerce'> E-commerce</label><label><input type='checkbox' name='type[]' value='Refonte'> Refonte</label>
-        </div>
+      <ul class='hero-points'>
+        <li>Multilingue natif</li><li>SEO & performance inclus</li><li>Support senior dédié</li>
+      </ul>
+      <div class='stats'>
+        <div class='stat'><strong data-count='120'>0</strong><span>projets déployés</span></div><div class='stat'><strong data-count='98'>0</strong><span>% de satisfaction</span></div><div class='stat'><strong data-count='12'>0</strong><span>pays livrés</span></div>
       </div>
-      <div class='form-section'>
-        <h3>Hébergement & Maintenance</h3>
-        <div class='radio-group'>
-          <label><input type='radio' name='hosting' value='Essentiel'> Essentiel</label><label><input type='radio' name='hosting' value='Professionnel'> Professionnel</label><label><input type='radio' name='hosting' value='Enterprise'> Enterprise</label><label><input type='radio' name='hosting' value='Pas d'hébergement'> Pas d'hébergement</label>
-        </div>
-      </div>
-      <div class='form-section'>
-        <h3>Budget approximatif</h3>
-        <select name='budget'>
-          <option value=''>--</option>
-          <option value='1 000 - 2 000 €'>1 000 - 2 000 €</option><option value='2 000 - 5 000 €'>2 000 - 5 000 €</option><option value='5 000 - 10 000 €'>5 000 - 10 000 €</option><option value='+ 10 000 €'>+ 10 000 €</option>
-        </select>
-      </div>
-      <div class='form-section'>
-        <textarea name='details' placeholder='Parlez-nous de votre projet' required></textarea>
-      </div>
-      <button type='submit' class='btn btn-primary'>Envoyer ma demande</button>
-      <button type='button' id='download-brief' class='btn btn-secondary'>Télécharger mon brief</button>
+    </div>
+    <div class='hero-visual'>
+      <img src='/assets/images/logo/shineNews-hero.webp' alt='ShineNows hero'>
+    </div>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <form class='form-grid' id='devis-form'>
+      <input type='text' name='nom' placeholder='Nom et prénom' required>
+      <input type='email' name='email' placeholder='Email professionnel' required>
+      <input type='tel' name='telephone' placeholder='Téléphone'>
+      <select name='budget' required>
+        <option value=''>Budget</option>
+        <option value='1 000 - 3 000 €'>1 000 - 3 000 €</option><option value='3 000 - 6 000 €'>3 000 - 6 000 €</option><option value='6 000 - 10 000 €'>6 000 - 10 000 €</option><option value='10 000 € +'>10 000 € +</option>
+      </select>
+      <textarea name='message' placeholder='Message' required></textarea>
+      <button type='submit' class='btn'>Envoyer ma demande</button>
+      <button type='button' class='btn btn-outline' id='download-brief'>Télécharger le brief</button>
     </form>
+  </div>
+</section>
+<section class='section'>
+  <div class='container'>
+    <div class='cta-panel'>
+      <h2>Prêt à collaborer ?</h2>
+      <p style='color:var(--text-gray);margin:1rem 0 1.5rem;'>Expliquez votre ambition et recevez un plan précis sous 24h.</p>
+      <a class='btn' href='/devis/'>Planifier un échange</a>
+    </div>
   </div>
 </section>
 </main>
 
-<footer>
+<footer class="footer">
   <div class="container">
     <div class="footer-grid">
       <div class="footer-col">
@@ -74,11 +82,11 @@
       </div>
       <div class="footer-col">
         <h4>Services</h4>
-        <a href="/services#hosting">Hébergement & Maintenance</a>
-        <a href="/services#vitrine">Sites Vitrine</a>
-        <a href="/services#ecommerce">E-commerce</a>
-        <a href="/services#refonte">Refonte de Site</a>
-        <a href="/services#seo">SEO & Performance</a>
+        <a href="/services/#hosting">Hébergement & Maintenance</a>
+        <a href="/services/#vitrine">Sites Vitrine</a>
+        <a href="/services/#commerce">E-commerce</a>
+        <a href="/services/#refonte">Refonte stratégique</a>
+        <a href="/services/#seo">SEO & Performance</a>
       </div>
       <div class="footer-col">
         <h4>Contact</h4>
@@ -91,9 +99,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-bottom">
-      © 2025 Shinenows. Tous droits réservés.
-    </div>
+    <div class="footer-bottom">© 2025 ShineNows. Tous droits réservés.</div>
   </div>
 </footer>
 
