feat: V2 Premium Architecture - Slider, Blog System & Complex Quote Form

--- a/de/contact/index.html
+++ b/de/contact/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='fr'>
+<html lang='de'>
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -21,7 +21,7 @@
         <ul class="nav-list"></ul>
       </nav>
       <div class="language-switcher">
-        <button class="lang-current" type="button" aria-haspopup="true" aria-expanded="false">FR</button>
+        <button class="lang-current" type="button" aria-haspopup="true" aria-expanded="false">DE</button>
         <div class="lang-dropdown" role="menu"></div>
       </div>
       <button class="burger-btn" type="button" aria-label="Menu" aria-expanded="false">
@@ -47,7 +47,7 @@
     </div>
     <div class="contact-card">
       <ul><li>+49 157 38 30 60 56</li><li>contact@shinenows.com</li><li>WhatsApp Business disponible</li><li>Disponibilité EU / US</li></ul>
-      <p>Besoin d'un devis précis ? <a href="/devis">Utilisez le formulaire dédié</a>.</p>
+      <p>Besoin d'un devis précis ? <a href="/de/devis">Utilisez le formulaire dédié</a>.</p>
       <div class="social-links">
         <a href="#"><img src="/assets/images/logo/facebook.png" alt="Facebook"></a>
         <a href="#"><img src="/assets/images/logo/instagram.png" alt="Instagram"></a>
