--- a/de/portfolio/index.html
+++ b/de/portfolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='fr'>
+<html lang='de'>
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -21,7 +21,7 @@
         <ul class="nav-list"></ul>
       </nav>
       <div class="language-switcher">
-        <button class="lang-current" type="button" aria-haspopup="true" aria-expanded="false">FR</button>
+        <button class="lang-current" type="button" aria-haspopup="true" aria-expanded="false">DE</button>
         <div class="lang-dropdown" role="menu"></div>
       </div>
       <button class="burger-btn" type="button" aria-label="Menu" aria-expanded="false">
@@ -47,7 +47,7 @@
     <h3>Maison Aube</h3>
     <p>Parcours immersif, prise de rendez-vous privée et boutique confidentielle.</p>
     <div class="portfolio-tags"><span>SEO</span><span>Responsive</span></div>
-    <a class="btn btn-outline" href="/devis">Voir</a>
+    <a class="btn btn-outline" href="/de/devis">Voir</a>
   </div>
 </article>
 
@@ -58,7 +58,7 @@
     <h3>Cabinet Gloria</h3>
     <p>Site médical rassurant avec système de réservation prioritaire.</p>
     <div class="portfolio-tags"><span>UX</span><span>Accessibilité</span></div>
-    <a class="btn btn-outline" href="/devis">Voir</a>
+    <a class="btn btn-outline" href="/de/devis">Voir</a>
   </div>
 </article>
 
@@ -69,7 +69,7 @@
     <h3>Atlas Legal</h3>
     <p>Plateforme bilingue avec portail client sécurisé.</p>
     <div class="portfolio-tags"><span>Bilingue</span><span>CRM</span></div>
-    <a class="btn btn-outline" href="/devis">Voir</a>
+    <a class="btn btn-outline" href="/de/devis">Voir</a>
   </div>
 </article>
 
@@ -80,7 +80,7 @@
     <h3>Helios Fit</h3>
     <p>Planning en ligne, abonnements et contenu vidéo sécurisé.</p>
     <div class="portfolio-tags"><span>E-commerce</span><span>Automation</span></div>
-    <a class="btn btn-outline" href="/devis">Voir</a>
+    <a class="btn btn-outline" href="/de/devis">Voir</a>
   </div>
 </article>
 
@@ -91,7 +91,7 @@
     <h3>Maison Rive</h3>
     <p>Portfolio immersif et bibliothèque de matières interactive.</p>
     <div class="portfolio-tags"><span>3D</span><span>Storytelling</span></div>
-    <a class="btn btn-outline" href="/devis">Voir</a>
+    <a class="btn btn-outline" href="/de/devis">Voir</a>
   </div>
 </article>
 
@@ -102,13 +102,13 @@
     <h3>Nova Ventures</h3>
     <p>Site corporate + data room investisseur.</p>
     <div class="portfolio-tags"><span>Data room</span><span>Multilingue</span></div>
-    <a class="btn btn-outline" href="/devis">Voir</a>
+    <a class="btn btn-outline" href="/de/devis">Voir</a>
   </div>
 </article>
 </div>
     <div class="cta-panel">
       <p>Vous voulez un site du même niveau ?</p>
-      <a class="btn" href="/devis">Demander un devis</a>
+      <a class="btn" href="/de/devis">Demander un devis</a>
     </div>
   </div>
 </section>
