--- a/en/devis/index.html
+++ b/en/devis/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='fr'>
+<html lang='en'>
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -21,7 +21,7 @@
         <ul class="nav-list"></ul>
       </nav>
       <div class="language-switcher">
-        <button class="lang-current" type="button" aria-haspopup="true" aria-expanded="false">FR</button>
+        <button class="lang-current" type="button" aria-haspopup="true" aria-expanded="false">EN</button>
         <div class="lang-dropdown" role="menu"></div>
       </div>
       <button class="burger-btn" type="button" aria-label="Menu" aria-expanded="false">
