--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <meta name='description' content='Agence web premium ShineNows'>
-  <title>ShineNows | Home</title>
-  <base href='/'>
-  <link rel='icon' type='image/webp' href='assets/images/logo/favicon.webp'>
-  <link rel='stylesheet' href='assets/css/styles.css'>
+  <meta name='description' content='ShineNows, studio web premium pour marques ambitieuses.'>
+  <title>ShineNows | Premium Web Studio</title>
+  <link rel='stylesheet' href='/assets/css/styles.css'>
+  <link rel='icon' type='image/webp' href='/assets/images/logo/favicon.webp'>
 </head>
 <body>
+
 <header class="header">
   <div class="container">
     <div class="header-inner">
@@ -30,91 +30,120 @@
     </div>
   </div>
 </header>
+
 <main>
-<section class='hero'>
-  <div class='container'>
-    <div class='hero-content'>
-      <h1>ShineNows conçoit des expériences web sur mesure qui convertissent</h1>
-      <p>Sites vitrines, plateformes sur mesure et parcours clients pensés pour la conversion multilingue.</p>
-      <div class='hero-actions'>
-        <a class='btn' href='/devis/'>Demander un devis</a>
-        <a class='btn btn-outline' href='/portfolio/'>Découvrir nos réalisations</a>
-      </div>
-      <ul class='hero-points'><li>Multilingue natif</li><li>SEO & performance inclus</li><li>Support senior dédié</li></ul>
-      <div class='stats'><div class='stat'><strong data-count='120'>0</strong><span>projets déployés</span></div><div class='stat'><strong data-count='98'>0</strong><span>% de satisfaction</span></div><div class='stat'><strong data-count='12'>0</strong><span>pays livrés</span></div></div>
-    </div>
-    <div class='hero-visual'>
-      <img src='assets/images/logo/shineNews-hero.webp' alt='ShineNows'>
+<section class='hero-slider'><div class='hero-slider-track'>
+<article class="hero-slide is-active" style="background-image:url('/assets/images/logo/shineNews-hero.webp')">
+  <div class="hero-slide-overlay"></div>
+  <div class="hero-slide-content">
+    <span>Signature digitale</span>
+    <h1>Studios, cabinets et marques premium gagnent avec ShineNows</h1>
+    <p>Nos sites immersifs alignent storytelling, performance et conversion multilingue.</p>
+    <div class="hero-slide-actions">
+      <a class="btn" href="/services">Découvrir</a>
     </div>
   </div>
-</section>
-<section class='section'>
-  <div class='container'>
-    <div class='section-heading'>
-      <h2>Nos services web</h2>
-      <p>Des prestations qualitatives, sans grille de prix publique.</p>
-    </div>
-    <div class='cards-grid'>
-      <div class='card'><div class='preview-icon'>🚀</div><h3>Hébergement & Maintenance</h3><p>Surveillance proactive, mises à jour pilotées et support direct.</p></div><div class='card'><div class='preview-icon'>💼</div><h3>Sites Vitrine</h3><p>Présence haut de gamme pour entrepreneurs et studios.</p></div><div class='card'><div class='preview-icon'>🛒</div><h3>E-commerce</h3><p>Boutiques fluides, sécurisées et prêtes à scaler.</p></div>
-    </div>
-  </div>
-</section>
-<section class='section'>
-  <div class='container'>
-    <div class='section-heading'>
-      <h2>Nos réalisations</h2>
-      <p>Sites premium réalisés sans compromis.</p>
-    </div>
-    <div class='portfolio-grid'>
-      <div class='project-card'><img src='assets/images/logo/project-01.webp' alt='Maison Aube'><span class='project-tag'>Luxury · Multilingue</span><div class='project-overlay'><h3>Maison Aube</h3><p>Site vitrine immersif pour une maison créative parisienne.</p><a class='btn btn-outline' href='#'>Voir le projet</a></div></div><div class='project-card'><img src='assets/images/logo/project-02.webp' alt='Cabinet Gloria'><span class='project-tag'>Santé · SEO</span><div class='project-overlay'><h3>Cabinet Gloria</h3><p>Site médical rassurant avec réservation intégrée.</p><a class='btn btn-outline' href='#'>Voir le projet</a></div></div><div class='project-card'><img src='assets/images/logo/project-03.webp' alt='Atlas Legal'><span class='project-tag'>Legal · B2B</span><div class='project-overlay'><h3>Atlas Legal</h3><p>Cabinet international avec tunnels de contact.</p><a class='btn btn-outline' href='#'>Voir le projet</a></div></div><div class='project-card'><img src='assets/images/logo/project-04.webp' alt='Helios Fit'><span class='project-tag'>Coaching · Commerce</span><div class='project-overlay'><h3>Helios Fit</h3><p>Plateforme de réservation et abonnement premium.</p><a class='btn btn-outline' href='#'>Voir le projet</a></div></div>
+</article>
+
+<article class="hero-slide" style="background-image:url('/assets/images/logo/shineNews-hero.webp')">
+  <div class="hero-slide-overlay"></div>
+  <div class="hero-slide-content">
+    <span>Expérience globale</span>
+    <h1>Une équipe senior qui orchestre design, code, contenu et données</h1>
+    <p>Nous opérons comme votre studio web intégré avec un engagement qualité luxe.</p>
+    <div class="hero-slide-actions">
+      <a class="btn" href="/devis">Découvrir</a>
     </div>
   </div>
-</section>
-<section class='section'>
-  <div class='container'>
-    <div class='section-heading'>
-      <h2>Blog & Insights</h2>
-      <p>Une veille premium pour préparer votre projet.</p>
-    </div>
-    <div class='cards-grid'>
-      <div class='blog-card'><span>Insight</span><h3>Structurer un site vitrine</h3><p>Les 4 sections indispensables pour convaincre.</p><a class='btn btn-outline' href='#'>Lire l'article</a></div><div class='blog-card'><span>Insight</span><h3>SEO 2025</h3><p>Checklist technique pour rester visible.</p><a class='btn btn-outline' href='#'>Lire l'article</a></div><div class='blog-card'><span>Insight</span><h3>Automatiser le suivi</h3><p>CRM, messaging et workflows synchronisés.</p><a class='btn btn-outline' href='#'>Lire l'article</a></div>
-    </div>
-  </div>
-</section>
-<section class='section'>
-  <div class='container'>
-    <div class='cta-panel'>
-      <h2>Prêt à collaborer ?</h2>
-      <p style='color:var(--text-gray);margin:1rem 0 1.5rem;'>Expliquez votre ambition et recevez un plan précis sous 24h.</p>
-      <a class='btn' href='/devis/'>Planifier un échange</a>
+</article>
+
+<article class="hero-slide" style="background-image:url('/assets/images/logo/shineNews-hero.webp')">
+  <div class="hero-slide-overlay"></div>
+  <div class="hero-slide-content">
+    <span>Impact international</span>
+    <h1>Des plateformes prêtes pour l’Europe, les US et le Moyen-Orient</h1>
+    <p>Hébergements souverains, multilingue natif et écosystème sécurisé.</p>
+    <div class="hero-slide-actions">
+      <a class="btn" href="/portfolio">Découvrir</a>
     </div>
   </div>
+</article>
+</div><div class='hero-slider-dots'></div></section>
+<section class="section services-intro">
+  <div class="container">
+    <div class="section-heading">
+      <h2>Domaines d'expertise</h2>
+      <p>Une équipe premium pour couvrir toute la chaîne de valeur digitale.</p>
+    </div>
+    <div class="services-grid">
+<article class="service-card">
+  <h3>Hébergement & Maintenance</h3>
+  <p>Infrastructure monitorée 24/7, support direct, mises à jour pilotées.</p>
+</article>
+
+<article class="service-card">
+  <h3>Sites Vitrine</h3>
+  <p>Expériences de marque pour entrepreneurs, studios et hôtels-boutique.</p>
+</article>
+
+<article class="service-card">
+  <h3>E-commerce</h3>
+  <p>Parcours d’achat premium, paiement sécurisé, pilotage data.</p>
+</article>
+
+<article class="service-card">
+  <h3>Refonte stratégique</h3>
+  <p>Audit complet, repositionnement digital et migration sécurisée.</p>
+</article>
+
+<article class="service-card">
+  <h3>SEO & Performance</h3>
+  <p>Core Web Vitals, contenus evergreen et suivi mensuel.</p>
+</article>
+
+<article class="service-card">
+  <h3>Multilingue natif</h3>
+  <p>FR / EN / DE / AR avec UX adaptée aux marchés internationaux.</p>
+</article>
+
+<article class="service-card">
+  <h3>Solutions sur-mesure</h3>
+  <p>Portails, API, CRM, automatisations et dashboards propriétaires.</p>
+</article>
+</div>
+  </div>
 </section>
+
+<section class="section">
+  <div class="container">
+    <p class="closing-text">ShineNows propose des solutions web premium, sécurisées et calibrées pour les ambitions internationales.</p>
+  </div>
+</section>
+
 </main>
 
 <footer class="footer">
   <div class="container">
     <div class="footer-grid">
-      <div class="footer-col">
-        <img src="assets/images/logo/shineNews-logo.webp" alt="ShineNows" class="footer-logo">
-        <p>Créateur de sites modernes, efficaces et personnalisés pour entrepreneurs, indépendants et petites entreprises.</p>
+      <div>
+        <h4>ShineNows</h4>
+        <p>Studio web premium pour entrepreneurs, maisons créatives et cabinets internationaux.</p>
       </div>
-      <div class="footer-col">
+      <div>
         <h4>Services</h4>
-        <a href="/services/#hosting">Hébergement & Maintenance</a>
-        <a href="/services/#vitrine">Sites Vitrine</a>
-        <a href="/services/#commerce">E-commerce</a>
-        <a href="/services/#refonte">Refonte stratégique</a>
-        <a href="/services/#seo">SEO & Performance</a>
+        <a href="/services">Services</a>
+        <a href="/portfolio">Portfolio</a>
+        <a href="/blog">Blog</a>
+        <a href="/devis">Devis</a>
       </div>
-      <div class="footer-col">
+      <div>
         <h4>Contact</h4>
         <p>+49 157 38 30 60 56</p>
         <p>contact@shinenows.com</p>
         <div class="social-links">
-          <a href="#"><img src="assets/images/logo/facebook.png" alt="Facebook"></a>
-          <a href="#"><img src="assets/images/logo/instagram.png" alt="Instagram"></a>
-          <a href="#"><img src="assets/images/logo/tiktok.png" alt="TikTok"></a>
+          <a href="#"><img src="/assets/images/logo/facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="/assets/images/logo/instagram.png" alt="Instagram"></a>
+          <a href="#"><img src="/assets/images/logo/tiktok.png" alt="TikTok"></a>
         </div>
       </div>
     </div>
@@ -122,6 +151,6 @@
   </div>
 </footer>
 
-<script src='assets/js/main.js'></script>
+<script src='/assets/js/main.js'></script>
 </body>
 </html>
